--- a/html/resources/styles.css
+++ b/html/resources/styles.css
@@ -1,1 +1,86 @@
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
+.navigation-bar {
+  width: 600px;
+  height: 150px;
+  position: absolute;
+  top: 2%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.nav-background {
+  width: 600px;
+  height: 80px;
+  position: absolute;
+  top: 70px;
+  background: #F6F1F1;
+  border-radius: 100px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.nav-buttons {
+  height: 50px;
+  position: absolute;
+  left: 50%;
+  top: 85px;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-button {
+  width: 140px;
+  height: 50px;
+  position: relative;
+  display: inline-block;
+  margin-right: 4px;
+}
+
+.nav-button:last-child {
+  margin-right: 0;
+}
+
+.button-back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #556462;
+  border-radius: 28px;
+}
+
+.button-label {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  text-align: center;
+  color: #E9E3E3;
+  font-size: 20px;
+  font-family: Ubuntu;
+  font-weight: 500;
+  line-height: 50px;
+  letter-spacing: 0.10px;
+  cursor: pointer;
+}
+
+.website-name {
+  width: 450px;
+  height: 60px;
+  left: 75px;
+  top: 0px;
+  position: absolute;
+  background-color: #D9D9D9;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: Ubuntu;
+}
