--- a/html/resources/styles.css
+++ b/html/resources/styles.css
@@ -14,6 +14,11 @@
   transform: translateX(-50%);
 }
 
+body {
+  background-color: #FFFAFA;
+}
+
+
 .nav-background {
   width: 600px;
   height: 80px;
