--- a/html/resources/styles.css
+++ b/html/resources/styles.css
@@ -116,6 +116,83 @@ body {
   cursor: pointer;
 }
 
+.moon {
+  position: fixed;
+  left: 5%;
+  position: absolute;
+  top: 1%;
+}
+
+.moon img {
+  display: block;
+  cursor: pointer;
+}
+
 footer {
   padding-top: 3%;
+}
+
+.content-with-image {
+  padding-top: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: left;
+  margin: 0 auto;
+}
+
+.text-content,
+.image-container {
+  flex: 1;
+  width: 423px;
+  margin: 0 auto;
+  z-index: 2;
+}
+
+.text-content {
+  width: auto;
+  padding: 0 40px;
+}
+
+
+.content-with-image .text-content {
+  position: relative;
+  z-index: 1;
+  padding-right: 50px;
+}
+
+.content-with-image .text-content::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: -50px;
+  width: 600px;
+  height: 500px;
+  background-color: #E9E3E3;
+  z-index: -1;
+  transform: translateY(-50%);
+}
+
+.image-container img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+main,
+footer {
+  text-align: center;
+  margin: 0 auto;
+  max-width: 800px;
+}
+
+iframe {
+  width: 100%;
+  max-width: 100%;
+  height: 610px;
+  border: 0;
+  border-radius: 28px;
+  margin: auto;
+  display: block;
 }
