About us text, colour change

--- a/html/resources/darkStyles.css
+++ b/html/resources/darkStyles.css
@@ -26,7 +26,7 @@ body {
 }
 
 .website-name {
-  background-color: #2C3E50;
+  background-color: #556462;
   box-shadow: 0 4px 4px rgba(255, 255, 255, 0.1);
 }
 
