--- a/html/resources/darkStyles.css
+++ b/html/resources/darkStyles.css
@@ -7,16 +7,6 @@ body {
   box-shadow: 0 4px 4px rgba(255, 255, 255, 0.1);
 }
 
-.nav-buttons {
-  height: 50px;
-  position: absolute;
-  left: 50%;
-  top: 60%;
-  transform: translateX(-50%);
-  display: flex;
-  justify-content: space-between;
-}
-
 .button-back {
   background: #333333;
 }
@@ -52,4 +42,16 @@ body {
 main,
 footer {
   color: #DDDDDD;
+}
+
+.profileBox {
+  background-color: #252525;
+  box-shadow: 0 4px 4px rgba(255, 255, 255, 0.1);
+}
+
+
+.text-box {
+  background-color: #333333;
+  box-shadow: 0 4px 4px rgba(255, 255, 255, 0.1);
+  color: #FFFAFA;
 }
