--- a/html/resources/styles.css
+++ b/html/resources/styles.css
@@ -34,7 +34,6 @@ main {
   flex: 1;
 }
 
-
 .nav-background {
   width: 600px;
   height: 80px;
@@ -89,6 +88,11 @@ main {
   cursor: pointer;
 }
 
+.link-button {
+  text-decoration: none;
+}
+
+
 .website-name {
   width: 450px;
   height: 60px;
@@ -104,6 +108,11 @@ main {
   font-size: 30px;
   font-weight: bold;
   font-family: Ubuntu;
+}
+
+.website-name a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .website-text p {
