--- a/html/resources/styles.css
+++ b/html/resources/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:400,500&display=swap');
+
 .container {
   display: flex;
   justify-content: center;
