--- a/html/resources/caitlin/caitlinStyles.css
+++ b/html/resources/caitlin/caitlinStyles.css
@@ -56,7 +56,7 @@ input[type="email"],
 input[type="password"],
 input[type="text"] {
   display: block;
-  width: 400px;
+  width: 90%;
   height: 50px;
   background-color: #fffafa;
   padding: 10px;
