--- a/html/resources/caitlin/caitlinStyles.css
+++ b/html/resources/caitlin/caitlinStyles.css
@@ -49,6 +49,7 @@ h1 {
 .name-group,
 .password-group {
   width: calc(100% - 3%);
+  margin: 0 auto;
 }
 
 
@@ -56,6 +57,7 @@ input[type="email"],
 input[type="password"],
 input[type="text"] {
   display: block;
+  margin: 0 auto;
   width: 90%;
   height: 50px;
   background-color: #fffafa;
