--- a/html/resources/caitlin/darkStyles.css
+++ b/html/resources/caitlin/darkStyles.css
@@ -39,7 +39,8 @@ h1 {
 }
 
 input[type="email"],
-input[type="password"] {
+input[type="password"],
+input[type="text"] {
   background-color: #252525;
   color: #DDDDDD;
   box-shadow: 4px 4px 10px rgba(255, 255, 255, 0.1);
