--- a/html/resources/jess/jessStyles.css
+++ b/html/resources/jess/jessStyles.css
@@ -1,10 +1,18 @@
+body {
+  font-family: 'Ubuntu', sans-serif;
+  background-color: #fffafa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
 .settings-container {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #f5f5f5;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 
   .settings-container h2 {
@@ -15,6 +23,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
+    text-align: center;
   }
 
   .settings-form label {
@@ -26,9 +35,10 @@
   .settings-form input[type="tel"],
   .settings-form input[type="password"] {
     width: 100%;
-    padding: 10px;
+    height: 50%;
     border-radius: 5px;
     border: none;
+    
   }
 
   .delete-account-button {
@@ -38,9 +48,28 @@
     border-radius: 5px;
     padding: 10px 20px;
     cursor: pointer;
+    margin: 0 auto;
   }
 
+  .save-button {
+    background-color: #0afd3b;
+    color: #f7f3f3;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin: 0 auto;
+  }
 
+  .log-out-button{
+    background-color: #8e8282;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin: 0 auto;
+  }
 
   .vertical-carousel {
     overflow: auto;
@@ -49,9 +78,8 @@
   }
 
   .carousel-inner {
-    display: flex;
-    flex-direction: column;
-    width: 100%; 
+    display: block;
+    width: auto; 
   }
 
   .carousel-item {
@@ -59,10 +87,10 @@
     border-bottom: 1px solid #ccc;
   }
 
-
   .box {
     background-color: #FFFFFF;
     border-radius: 5px;
+    border-color: #8e8282;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-bottom: 20px;
@@ -79,6 +107,13 @@
     height: 250px; 
   }
 
-  .box-content {
-    flex: 1; 
+  .profile-picture {
+    width: 10%;
+    height: 10%;
+    border-radius: 50%;
+    margin-right: 3%;
   }
+
+  
+
+  
