--- a/html/resources/jess/jessStyles.css
+++ b/html/resources/jess/jessStyles.css
@@ -128,3 +128,9 @@
   font-family: 'Ubuntu Light', sans-serif;
   font-size: 0.8em;
 }
+
+
+.button-container {
+  justify-content: center;
+  gap: 3%;
+}
